==> Jackiempty/ISP32-RTOS/components/lora/ra01s.c <==
#include "ra01s.h"
#define TAG "RA01S"
#define delay(ms) vTaskDelay(pdMS_TO_TICKS(ms))

void Reset(void) {
  delay(10);
  gpio_set_level(SX126x_RESET, 0);
  delay(20);
  gpio_set_level(SX126x_RESET, 1);
  delay(10);
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT);
}

void SetRx(uint32_t timeout) {
  if (debugPrint) {
    ESP_LOGI(TAG, "----- SetRx timeout=%" PRIu32, timeout);
  }
  SetStandby(SX126X_STANDBY_RC);
  SetRxEnable();
  uint8_t buf[3];
  buf[0] = (uint8_t)((timeout >> 16) & 0xFF);
  buf[1] = (uint8_t)((timeout >> 8) & 0xFF);
  buf[2] = (uint8_t)(timeout & 0xFF);
  WriteCommand(SX126X_CMD_SET_RX, buf, 3);  // 0x82

  for (int retry = 0; retry < 10; retry++) {
    if ((GetStatus() & 0x70) == 0x50) break;
    delay(1);
  }
  if ((GetStatus() & 0x70) != 0x50) {
    ESP_LOGE(TAG, "SetRx Illegal Status");
    LoRaError(ERR_INVALID_SETRX_STATE);
  }
}

void SetRxEnable(void) {
  if (debugPrint) {
    ESP_LOGI(TAG, "SetRxEnable:SX126x_TXEN=%d SX126x_RXEN=%d", SX126x_TXEN, SX126x_RXEN);
  }
  if ((SX126x_TXEN != -1) && (SX126x_RXEN != -1)) {
    gpio_set_level(SX126x_RXEN, HIGH);
    gpio_set_level(SX126x_TXEN, LOW);
  }
}

void SetTx(uint32_t timeoutInMs) {
  if (debugPrint) {
    ESP_LOGI(TAG, "----- SetTx timeoutInMs=%" PRIu32, timeoutInMs);
  }
  SetStandby(SX126X_STANDBY_RC);
  SetTxEnable();
  uint8_t buf[3];
  uint32_t tout = timeoutInMs;
  if (timeoutInMs != 0) {
    uint32_t timeoutInUs = timeoutInMs * 1000;
    tout = (uint32_t)(timeoutInUs / 0.015625);
  }
  if (debugPrint) {
    ESP_LOGI(TAG, "SetTx timeoutInMs=%" PRIu32 " tout=%" PRIu32, timeoutInMs, tout);
  }
  buf[0] = (uint8_t)((tout >> 16) & 0xFF);
  buf[1] = (uint8_t)((tout >> 8) & 0xFF);
  buf[2] = (uint8_t)(tout & 0xFF);
  WriteCommand(SX126X_CMD_SET_TX, buf, 3);  // 0x83

  for (int retry = 0; retry < 10; retry++) {
    if ((GetStatus() & 0x70) == 0x60) break;
    delay(1);
  }
  if ((GetStatus() & 0x70) != 0x60) {
    ESP_LOGE(TAG, "SetTx Illegal Status");
    LoRaError(ERR_INVALID_SETTX_STATE);
  }
}

void SetTxEnable(void) {
  if (debugPrint) {
    ESP_LOGI(TAG, "SetTxEnable:SX126x_TXEN=%d SX126x_RXEN=%d", SX126x_TXEN, SX126x_RXEN);
  }
  if ((SX126x_TXEN != -1) && (SX126x_RXEN != -1)) {
    gpio_set_level(SX126x_RXEN, LOW);
    gpio_set_level(SX126x_TXEN, HIGH);
  }
}

void WaitForIdle(unsigned long timeout) {
  TickType_t start = xTaskGetTickCount();
  while (gpio_get_level(SX126x_BUSY)) {
    if (xTaskGetTickCount() - start > (timeout / portTICK_PERIOD_MS)) {
      ESP_LOGE(TAG, "WaitForIdle Timeout timeout=%lu", timeout);
      LoRaError(ERR_IDLE_TIMEOUT);
      return;
    }
  }
}

uint8_t ReadBuffer(uint8_t *rxData, uint8_t maxLen) {
  uint8_t offset = 0;
  uint8_t payloadLength = 0;
  GetRxBufferStatus(&payloadLength, &offset);
  if (payloadLength > maxLen) {
    ESP_LOGW(TAG, "ReadBuffer maxLen too small");
    return 0;
  }

  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT);

  // start transfer
  gpio_set_level(SX126x_SPI_SELECT, LOW);

  spi_transfer(SX126X_CMD_READ_BUFFER);  // 0x1E
  spi_transfer(offset);
  spi_transfer(SX126X_CMD_NOP);
  for (uint16_t i = 0; i < payloadLength; i++) {
    rxData[i] = spi_transfer(SX126X_CMD_NOP);
  }

  // stop transfer
  gpio_set_level(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  WaitForIdle(BUSY_WAIT);

  return payloadLength;
}

void WriteBuffer(uint8_t *txData, uint8_t txDataLen) {
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT);

  // start transfer
  gpio_set_level(SX126x_SPI_SELECT, LOW);

  spi_transfer(SX126X_CMD_WRITE_BUFFER);  // 0x0E
  spi_transfer(0);                        // offset in tx fifo
  for (uint16_t i = 0; i < txDataLen; i++) {
    spi_transfer(txData[i]);
  }

  // stop transfer
  gpio_set_level(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  WaitForIdle(BUSY_WAIT);
}

void WriteRegister(uint16_t reg, uint8_t *data, uint8_t numBytes) {
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT);

  if (debugPrint) {
    ESP_LOGI(TAG, "WriteRegister: REG=0x%02x", reg);
  }
  // start transfer
  gpio_set_level(SX126x_SPI_SELECT, LOW);

  // send command byte
  spi_transfer(SX126X_CMD_WRITE_REGISTER);  // 0x0D
  spi_transfer((reg & 0xFF00) >> 8);
  spi_transfer(reg & 0xff);

  for (uint8_t n = 0; n < numBytes; n++) {
    uint8_t in = spi_transfer(data[n]);
    (void)in;
    if (debugPrint) {
      ESP_LOGI(TAG, "%02x --> %02x", data[n], in);
      // ESP_LOGI(TAG, "DataOut:%02x ", data[n]);
    }
  }

  // stop transfer
  gpio_set_level(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  WaitForIdle(BUSY_WAIT);
#if 0
	if(waitForBusy) {
		WaitForIdle(BUSY_WAIT);
	}
#endif
}

void ReadRegister(uint16_t reg, uint8_t *data, uint8_t numBytes) {
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT);

  if (debugPrint) {
    ESP_LOGI(TAG, "ReadRegister: REG=0x%02x", reg);
  }

  // start transfer
  gpio_set_level(SX126x_SPI_SELECT, LOW);

  // send command byte
  spi_transfer(SX126X_CMD_READ_REGISTER);  // 0x1D
  spi_transfer((reg & 0xFF00) >> 8);
  spi_transfer(reg & 0xff);
  spi_transfer(SX126X_CMD_NOP);

  for (uint8_t n = 0; n < numBytes; n++) {
    data[n] = spi_transfer(SX126X_CMD_NOP);
    if (debugPrint) {
      ESP_LOGI(TAG, "DataIn:%02x ", data[n]);
    }
  }

  // stop transfer
  gpio_set_level(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  WaitForIdle(BUSY_WAIT);
#if 0
	if(waitForBusy) {
		WaitForIdle(BUSY_WAIT);
	}
#endif
}

void WriteCommand(uint8_t cmd, uint8_t *data, uint8_t numBytes) {
  uint8_t status;
  for (int retry = 1; retry < 10; retry++) {
    status = WriteCommand2(cmd, data, numBytes);
    ESP_LOGD(TAG, "status=%02x", status);
    if (status == 0) break;
    ESP_LOGW(TAG, "WriteCommand2 status=%02x retry=%d", status, retry);
  }
  if (status != 0) {
    ESP_LOGE(TAG, "SPI Transaction error:0x%02x", status);
    LoRaError(ERR_SPI_TRANSACTION);
  }
}

uint8_t WriteCommand2(uint8_t cmd, uint8_t *data, uint8_t numBytes) {
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT);

  // start transfer
  gpio_set_level(SX126x_SPI_SELECT, LOW);

  // send command byte
  if (debugPrint) {
    ESP_LOGI(TAG, "WriteCommand: CMD=0x%02x", cmd);
  }
  spi_transfer(cmd);

  // variable to save error during SPI transfer
  uint8_t status = 0;

  // send/receive all bytes
  for (uint8_t n = 0; n < numBytes; n++) {
    uint8_t in = spi_transfer(data[n]);
    if (debugPrint) {
      ESP_LOGI(TAG, "%02x --> %02x", data[n], in);
    }

    // check status
    if (((in & 0b00001110) == SX126X_STATUS_CMD_TIMEOUT) || ((in & 0b00001110) == SX126X_STATUS_CMD_INVALID) ||
        ((in & 0b00001110) == SX126X_STATUS_CMD_FAILED)) {
      status = in & 0b00001110;
      break;
    } else if (in == 0x00 || in == 0xFF) {
      status = SX126X_STATUS_SPI_FAILED;
      break;
    }
  }

  // stop transfer
  gpio_set_level(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  WaitForIdle(BUSY_WAIT);
#if 0
	if(waitForBusy) {
		WaitForIdle(BUSY_WAIT);
	}
#endif

#if 0
	if (status != 0) {
		ESP_LOGE(TAG, "SPI Transaction error:0x%02x", status);
		LoRaError(ERR_SPI_TRANSACTION);
	}
#endif
  return status;
}

void ReadCommand(uint8_t cmd, uint8_t *data, uint8_t numBytes) {
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT);

  // start transfer
  gpio_set_level(SX126x_SPI_SELECT, LOW);

  // send command byte
  if (debugPrint) {
    ESP_LOGI(TAG, "ReadCommand: CMD=0x%02x", cmd);
  }
  spi_transfer(cmd);

  // send/receive all bytes
  for (uint8_t n = 0; n < numBytes; n++) {
    data[n] = spi_transfer(SX126X_CMD_NOP);
    if (debugPrint) {
      ESP_LOGI(TAG, "DataIn:%02x", data[n]);
    }
  }

  // stop transfer
  gpio_set_level(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  WaitForIdle(BUSY_WAIT);
#if 0
	if(waitForBusy) {
		WaitForIdle(BUSY_WAIT);
	}
#endif
}
