==> Jackiempty/ISP32_Ground_Station/lib/lora/ra01s.cpp <==
#include "Arduino.h"
#include <SPI.h>
#include "ra01s.h"

void SX126x::Reset(void)
{
  delay(10);
  digitalWrite(SX126x_RESET,0);
  delay(20);
  digitalWrite(SX126x_RESET,1);
  delay(10);
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT, "Reset", true);
}

void SX126x::SetRx(uint32_t timeout)
{
  if (debugPrint) {
    Serial.print("----- SetRx timeout=0x");
    Serial.println(timeout, HEX);
  }
  SetStandby(SX126X_STANDBY_RC);
  SetRxEnable();
  uint8_t buf[3];
  buf[0] = (uint8_t)((timeout >> 16) & 0xFF);
  buf[1] = (uint8_t)((timeout >> 8) & 0xFF);
  buf[2] = (uint8_t )(timeout & 0xFF);
  WriteCommand(SX126X_CMD_SET_RX, buf, 3); // 0x82

  for(int retry=0;retry<10;retry++) {
    if ((GetStatus() & 0x70) == 0x50) break;
    delay(1);
  }
  if ((GetStatus() & 0x70) != 0x50) {
    Serial.println("SetRx Illegal Status");
    while(1) {delay(1);}
  }
}

void SX126x::SetRxEnable(void)
{
  if (debugPrint) {
    Serial.print("SetRxEnable:SX126x_TXEN=");
    Serial.print(SX126x_TXEN);
    Serial.print(" SX126x_RXEN=");
    Serial.print(SX126x_RXEN);
    Serial.println();
  }
  if ((SX126x_TXEN != -1) && (SX126x_RXEN != -1)) {
    digitalWrite(SX126x_RXEN, HIGH);
    digitalWrite(SX126x_TXEN, LOW);
  }
}

void SX126x::SetTx(uint32_t timeoutInMs)
{
  if (debugPrint) {
    Serial.print("----- SetTx timeoutInMs=");
    Serial.println(timeoutInMs);
  }
  SetStandby(SX126X_STANDBY_RC);
  SetTxEnable();
  uint8_t buf[3];
  uint32_t tout = timeoutInMs;
  if (timeoutInMs != 0) {
    // Timeout duration = Timeout * 15.625 ��s
    uint32_t timeoutInUs = timeoutInMs * 1000;
    tout = (uint32_t)(timeoutInUs / 15.625);
  }
  if (debugPrint) {
    Serial.print("SetTx timeoutInMs=");
    Serial.print(timeoutInMs);
    Serial.print(" tout=");
    Serial.println(tout);
  }
  buf[0] = (uint8_t)((tout >> 16) & 0xFF);
  buf[1] = (uint8_t)((tout >> 8) & 0xFF);
  buf[2] = (uint8_t )(tout & 0xFF);
  WriteCommand(SX126X_CMD_SET_TX, buf, 3); // 0x83

  for(int retry=0;retry<10;retry++) {
    if ((GetStatus() & 0x70) == 0x60) break;
    delay(1);
  }
  if ((GetStatus() & 0x70) != 0x60) {
    Serial.println("SetTx Illegal Status");
    while(1) {delay(1);}
  }
}

void SX126x::SetTxEnable(void)
{
  if (debugPrint) {
    Serial.print("SetTxEnable:SX126x_TXEN=");
    Serial.print(SX126x_TXEN);
    Serial.print(" SX126x_RXEN=");
    Serial.print(SX126x_RXEN);
    Serial.println();
  }
  if ((SX126x_TXEN != -1) && (SX126x_RXEN != -1)){
    digitalWrite(SX126x_RXEN, LOW);
    digitalWrite(SX126x_TXEN, HIGH);
  }
}

void SX126x::WaitForIdle(unsigned long timeout, const char *text, bool stop)
{
  unsigned long start = millis();
  delayMicroseconds(1);
  while(digitalRead(SX126x_BUSY)) {
    delayMicroseconds(1);
    if(millis() - start >= timeout) {
      Serial.print("WaitForIdle [");
      Serial.print(text);
      Serial.print("] Timeout timeout=");
      Serial.println(timeout);
      if (stop) {
        while(1) {delay(1);}
      }
    }
  }
}

uint8_t SX126x::ReadBuffer(uint8_t *rxData, uint8_t maxLen)
{
  uint8_t offset = 0;
  uint8_t payloadLength = 0;
  GetRxBufferStatus(&payloadLength, &offset);
  if( payloadLength > maxLen )
  {
    Serial.println("ReadBuffer maxLen too small");
    return 0;
  }

  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT, "start ReadBuffer", true);

  digitalWrite(SX126x_SPI_SELECT, LOW);
  SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));
  SPI.transfer(SX126X_CMD_READ_BUFFER); // 0x1E
  SPI.transfer(offset);
  SPI.transfer(SX126X_CMD_NOP);
  for( uint16_t i = 0; i < payloadLength; i++ )
  {
    rxData[i] = SPI.transfer(SX126X_CMD_NOP);  
  }
  SPI.endTransaction();
  digitalWrite(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  WaitForIdle(BUSY_WAIT, "end ReadBuffer", false);

  return payloadLength;
}

void SX126x::WriteBuffer(uint8_t *txData, uint8_t txDataLen)
{
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT, "start WriteBuffer", true);

  digitalWrite(SX126x_SPI_SELECT, LOW);
  SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));
  SPI.transfer(SX126X_CMD_WRITE_BUFFER); // 0x0E
  SPI.transfer(0); //offset in tx fifo
  for( uint16_t i = 0; i < txDataLen; i++ )
  { 
     SPI.transfer( txData[i]);  
  }
  SPI.endTransaction();
  digitalWrite(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  WaitForIdle(BUSY_WAIT, "end WriteBuffer", false);
}

void SX126x::WriteRegister(uint16_t reg, uint8_t* data, uint8_t numBytes, bool waitForBusy) {
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT, "start WriteRegister", true);

  // start transfer
  if(debugPrint) {
    Serial.print("WriteRegister: REG=0x");
    Serial.print(reg, HEX);
  }
  digitalWrite(SX126x_SPI_SELECT, LOW);
  SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));

  // send command byte
  SPI.transfer(SX126X_CMD_WRITE_REGISTER); // 0x0D
  SPI.transfer((reg & 0xFF00) >> 8);
  SPI.transfer(reg & 0xff);
  
  if(debugPrint) {
    Serial.print(" ");
    Serial.print(" DataOut: ");
  }
  for(uint8_t n = 0; n < numBytes; n++) {
    uint8_t in = SPI.transfer(data[n]);
    if(debugPrint) {
      Serial.print(data[n], HEX);
      Serial.print(" ");
    }
  }
  if(debugPrint)Serial.println();

  // stop transfer
  SPI.endTransaction();
  digitalWrite(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  if(waitForBusy) {
    WaitForIdle(BUSY_WAIT, "end WriteRegister", false);
  }
}

void SX126x::ReadRegister(uint16_t reg, uint8_t* data, uint8_t numBytes, bool waitForBusy) {
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT, "start ReadRegister", true);

  // start transfer
  if(debugPrint) {
    Serial.print("ReadRegister:  REG=0x");
    Serial.print(reg, HEX);
  }
  digitalWrite(SX126x_SPI_SELECT, LOW);
  SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));

  // send command byte
  SPI.transfer(SX126X_CMD_READ_REGISTER); // 0x1D
  SPI.transfer((reg & 0xFF00) >> 8);
  SPI.transfer(reg & 0xff);
  SPI.transfer(SX126X_CMD_NOP);

  if(debugPrint) {
    Serial.print(" ");
    Serial.print(" DataIn: ");
  }
  for(uint8_t n = 0; n < numBytes; n++) {
    data[n] = SPI.transfer(SX126X_CMD_NOP);
    if(debugPrint) {
      Serial.print(data[n], HEX);
      Serial.print(" ");
    }
  }
  if(debugPrint) Serial.println();

  // stop transfer
  SPI.endTransaction();
  digitalWrite(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  if(waitForBusy) {
    WaitForIdle(BUSY_WAIT, "end ReadRegister", false);
  }
}

void SX126x::WriteCommand(uint8_t cmd, uint8_t* data, uint8_t numBytes, bool waitForBusy) {
  uint8_t status;
  for (int retry=1; retry<10; retry++) {
    status = WriteCommand2(cmd, data, numBytes,  waitForBusy);
    if (status == 0) break;
  }
  if (status != 0) {
    Serial.print("SPI Transaction error:");
    Serial.println(status);
    while(1) {delay(1);}
  }
}

uint8_t SX126x::WriteCommand2(uint8_t cmd, uint8_t* data, uint8_t numBytes, bool waitForBusy) {
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT, "start WriteCommand2", true);

  // start transfer
  digitalWrite(SX126x_SPI_SELECT, LOW);
  SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));

  // send command byte
  if(debugPrint) {
    Serial.print("WriteCommand:  CMD=0x");
    Serial.print(cmd, HEX);
    Serial.print(" ");
    Serial.print(" DataOut: ");
  }
  SPI.transfer(cmd);

  // variable to save error during SPI transfer
  uint8_t status = 0;

  // send/receive all bytes
  for(uint8_t n = 0; n < numBytes; n++) {
    uint8_t in = SPI.transfer(data[n]);
    if(debugPrint) {
      Serial.print(data[n], HEX);
      Serial.print("-->");
      Serial.print(in, HEX);
      Serial.print(" ");
    }

    // check status
    if(((in & 0b00001110) == SX126X_STATUS_CMD_TIMEOUT) ||
     ((in & 0b00001110) == SX126X_STATUS_CMD_INVALID) ||
     ((in & 0b00001110) == SX126X_STATUS_CMD_FAILED)) {
    status = in & 0b00001110;
    break;
    } else if(in == 0x00 || in == 0xFF) {
    status = SX126X_STATUS_SPI_FAILED;
    break;
    }
  }
  if(debugPrint) Serial.println();

  // stop transfer
  SPI.endTransaction();
  digitalWrite(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  if(waitForBusy) {
    WaitForIdle(BUSY_WAIT, "end WriteCommand2", false);
  }

  if (status != 0) {
    Serial.print("SPI Transaction error:");
    Serial.println(status);
    //while(1) {delay(1);}
  }
  return status;
}

void SX126x::ReadCommand(uint8_t cmd, uint8_t* data, uint8_t numBytes, bool waitForBusy) {
  // ensure BUSY is low (state meachine ready)
  WaitForIdle(BUSY_WAIT, "start ReadCommand", true);

  // start transfer
  digitalWrite(SX126x_SPI_SELECT, LOW);
  SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));

  // send command byte
  if(debugPrint) {
    Serial.print("ReadCommand:   CMD=0x");
    Serial.print(cmd, HEX);
  }
  SPI.transfer(cmd);

  if(debugPrint) {
    Serial.print(" ");
    Serial.print(" DataIn: ");
  }

  // send/receive all bytes
  for(uint8_t n = 0; n < numBytes; n++) {
    data[n] = SPI.transfer(SX126X_CMD_NOP);
    if(debugPrint) {
      Serial.print(data[n], HEX);
      Serial.print(" ");
    }
  }
  if(debugPrint) Serial.println();

  // stop transfer
  SPI.endTransaction();
  digitalWrite(SX126x_SPI_SELECT, HIGH);

  // wait for BUSY to go low
  if(waitForBusy) {
    WaitForIdle(BUSY_WAIT, "end ReadCommand", false);
  }
}
